@@ -24,7 +24,7 @@
         <ul id="link">
             <li>Current Version: 0.6.4</li>
             <li><a href="http://download.gnome.org/sources/nemiver/0.6">Download Source</a></li>
-            <li><a href="http://svn.gnome.org/viewcvs/nemiver/trunk">Browse Source Online</a></li>
+            <li><a href="http://git.gnome.org/cgit/nemiver">Browse Source Online</a></li>
             <li><a href="http://live.gnome.org/Nemiver">Wiki</a></li>
             <li><a href="http://bugzilla.gnome.org/enter_bug.cgi?product=nemiver">File a bug</a></li>
         </ul>
@@ -66,9 +66,9 @@
         You can get it and compile it. To do so, please make sure you have all the <a href="#dependencies">dependencies</a> installed.
         </p>
         <p>
-        If you want bleeding edge source code, you can fetch and compile the code from our <a href="http://subversion.tigris.org">subversion</a>
+        If you want bleeding edge source code, you can fetch and compile the code from our <a href="http://git-scm.com">git</a>
         repository. To do so, you can type:
-        <code>svn co http://svn.gnome.org/svn/nemiver/trunk nemiver</code>.
+        <code>git clone git://git.gnome.org/nemiver nemiver.git</code>
         </p>
 
         <a name="dependencies"></a>
