@@ -1,3 +1,7 @@
+2009-02-27  Dodji Seketeli  <dodji@redhat.com>
+
+	* projects.gnome.org/nemiver/index.html: Update scm info.
+
 2009-02-24  Dodji Seketeli  <dodji@redhat.com>
 
 	* projects.gnome.org/nemiver/index.html: The mailing list moved to
